objects/Temp_Test__c.object
<CustomObject   >
    <fields>
        <fullName>ABC__c</fullName>
        <label>ABC</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp2__c</fullName>
        <label>Temp2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp3__c</fullName>
        <label>Temp3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp__c</fullName>
        <formula>IF( $Permission.Test_Permission , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temp</label>
        <type>Text</type>
    </fields>
</CustomObject>